# cpp-gui-youtube-dlp

./: CMakeLists.txt
youtube-dl/: CMakeLists.txt  youtube-dl.cpp  youtube-dl.h
